[gd_scene load_steps=2 format=2]

[ext_resource path="res://system/components/fighter.gd" type="Script" id=2]

[node name="Fighter" type="VBoxContainer"]
margin_right = 302.0
margin_bottom = 334.0
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 302.0
margin_bottom = 302.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 295.0
margin_bottom = 295.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="ProfilePicture" type="TextureRect" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 16.0
margin_top = 16.0
margin_right = 272.0
margin_bottom = 272.0
rect_min_size = Vector2( 256, 256 )
expand = true
stretch_mode = 6

[node name="PanelContainer2" type="PanelContainer" parent="."]
margin_top = 306.0
margin_right = 302.0
margin_bottom = 334.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 295.0
margin_bottom = 21.0
alignment = 1

[node name="FighterNameLabel" type="Label" parent="PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 38.0
margin_right = 138.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
align = 1
valign = 1
autowrap = true

[node name="VSeparator" type="VSeparator" parent="PanelContainer2/HBoxContainer"]
margin_left = 142.0
margin_right = 146.0
margin_bottom = 14.0

[node name="FighterHealthLabel" type="Label" parent="PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 150.0
margin_right = 250.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
align = 1
valign = 1
autowrap = true
